Shift jump-link fix to base styles

--- a/css/templates/themes/1/page.css
+++ b/css/templates/themes/1/page.css
@@ -51,11 +51,6 @@ h4,
   line-height: var(--line-height-2);
 }
 
-#content {
-  padding-top: var(--space-6);
-  margin-top: calc(0px - var(--space-6));
-}
-
 .ampstart-headerbar {
   background: var(--color-primary);
   color: var(--color-font-primary);
